--- a/SchoolManagmentApp/eventApp/templates/event_detail.html
+++ b/SchoolManagmentApp/eventApp/templates/event_detail.html
@@ -14,7 +14,7 @@
                         <div class="mb-2 mt-2 card-divider"></div>
                         <div class="">{{event.description}}</div>
                         <div class="mt-2">{{event.text}}</div>
-                        <a class="text-decoration-none text-white" href="">
+                        <a class="text-decoration-none text-white" href="{% url 'from_event_to_raport' event.id %}">
                         <div class="mt-2 size-up-hover">{{event.connected_to_lesson}}</div>
                         </a>
                         <div class="mb-2 mt-2 card-divider"></div>
