calendarApp - Implemented the add and edit lesson features. Also, made a few fixes to the logic. Still need to add verification for classroom and teacher occupancy.

--- a/SchoolManagmentApp/calendarApp/templates/create_lesson.html
+++ b/SchoolManagmentApp/calendarApp/templates/create_lesson.html
@@ -1,14 +1,57 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Create Lesson</title>
-</head>
-<body>
-    <h1>Create a New Lesson</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Create">
-    </form>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load static %}
+{% load widget_tweaks %}
+{% load plus_date %}
+{% block title%}
+SchoolManagmentApp
+{% endblock title %}
+{% block content%}
+
+<section class="first-section">
+    <div class="container-fluid ">
+        <div class="row d-flex justify-content-center align-items-center">
+            <div class="col-md-9 col-lg-6 col-xl-7 empty-class">
+                <div class="text-center">
+                    <img src="{% static 'img/pencil.png' %}" class="img-fluid pics-height" alt="Sample image">
+                </div>
+            </div>
+            <div class="mt-5 col-12 col-md-8 col-lg-6 col-xl-5 d-flex justify-content-center align-items-center">
+                <div class="card bg-dark text-white" style="border-radius: 1rem;">
+                    <di class="card-body p-5 text-center">
+                        <form method="POST">
+                            <div class=" mt-md-4 pb-5">
+
+                                <h2 class="fw-bold mb-2 text-uppercase mb-5">Create a New Lesson for {{class_unit}} -
+                                    lesson no. {{lesson_number}} on {{date}}</h2>
+
+
+                                {%for field in form %}
+                                {% if field.name|not_in_list:'is_base,is_cancelled' %}
+                                {{field|add_class:"form-control form-control-md"}}
+                                {{field|add_label_class:"form-label"}}
+                                {%else%}
+
+                                <div>
+                                    {{field|add_class:"form-check-input"}}
+                                    {{field|add_label_class:"form-check-label"}}
+                                </div>
+
+
+                                {%endif%}
+                                {%endfor%}
+
+                                {% csrf_token %}
+
+                                <div>
+                                    <button class="btn btn-outline-light btn-lg px-5 mt-3 mb-2" type="submit">Save
+                                        changes</button>
+                                </div>
+                            </div>
+                        </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</section>
+{% endblock content %}
