--- a/SchoolManagmentApp/teacherApp/templates/lesson_class_initiation.html
+++ b/SchoolManagmentApp/teacherApp/templates/lesson_class_initiation.html
@@ -3,11 +3,13 @@
 <div class="report-box-detail">
     <div class="report-card-detail text-white">
         <div class="report-text">
-            <h3>U are checking attendance for class: </h3>
+            <h3>U are checking attendance for class: {{current_class}}</h3>
         </div>
+        <div class="mt-2 card-divider"></div>
+        <div class="filter-content mt-2">
         <form method="post">
             {% csrf_token %}
-            <table>
+            <table class="table text-white">
                 <thead>
                     <tr>
                         <th>Student</th>
@@ -18,13 +20,17 @@
                     {% for student in students %}
                         <tr>
                             <td>{{ student }}</td>
-                            <td><input type="checkbox" name="{{ student.id }}" value="True"></td>
+                            <div class="form-check form-check-inline">
+                            <td><input type="checkbox" name="{{ student.id }}" value="True" class="attendance-checkobox"></td></div>
                         </tr>
                     {% endfor %}
                 </tbody>
             </table>
+            <div class="text-center mt-3">
             <button class="apply-button" type="submit">Apply</button>
+        </div>
         </form>
+    </div>
     </div>
 </div>
 
