--- a/SchoolManagmentApp/eventApp/templates/add_event.html
+++ b/SchoolManagmentApp/eventApp/templates/add_event.html
@@ -12,28 +12,49 @@
 
 
 
-
-<div class="adding-window">
-    <div class="adding-content">
-        <h2 class="text-white">Fill in the event</h2>
-      
+<div class="report-box-detail">
+    <div class="report-card-detail text-white">
+        <div class="report-text">
+            <div>
+                <h2>Event for lesson "{{current_lesson_report.lesson_title}}"</h2>
+            </div>
+            <div>
+                <h4>Subject: {{current_lesson_report.subject}}</h4>
+            </div>
+        </div>
+        <div class="mt-2 card-divider"></div>
+        <div class="filter-content mt-2">
             <form method="post">
                 {% csrf_token %}
+                <div>Description:</div>
+                <div class="m-3">{{ add_event_form.description }}</div>
+                <div class="mb-3"> Event type: {{ add_event_form.event_type }}</div>
 
-                <div class="adding-field">{{ add_event_form.description }}</div>
-                <div class="adding-field "> Event type: {{ add_event_form.event_type }}</div>
-                <div class="adding-field"> Realisation Date: {{ add_event_form.realisation_time }}</div>
-                <div class="adding-field">Connected to lesson: {{ add_event_form.connected_to_lesson }}</div>
+                <div class="mb-3"> Realisation Date: {{ add_event_form.realisation_time }}</div>
+
+                
+                <div class="text-center">
                 <button class="apply-button" type="submit">Add Event</button>
+                </div>
             </form>
-            <a class = "container-fluid" href="{% url 'teacher_events' %}">
-                <i class="fa-solid fa-backward back-button-image " style="color: #023602;"></i>
-            </a>
-        
+        </div>
+<div class="mt-3">
+        <a class="container-fluid" href="{% url 'lesson_conducting' current_lesson_report.id %}">
+            <i class="fa-solid fa-backward back-button-image " style="color: #023602;"></i>
+        </a>
     </div>
-
-
+    </div>
+</div>
 </div>
 
 
 {% endblock content %}
+
+
+
+
+
+
+<a class="container-fluid" href="{% url 'lesson_conducting' current_lesson_report.id %}">
+    <i class="fa-solid fa-backward back-button-image " style="color: #023602;"></i>
+</a>
