Added dynamic subjects list

--- a/SchoolManagmentApp/calendarApp/templates/create_lesson.html
+++ b/SchoolManagmentApp/calendarApp/templates/create_lesson.html
@@ -54,4 +54,6 @@ SchoolManagmentApp
     </div>
     </div>
 </section>
+
+<script type="text/javascript" src="{% static 'js/dynamic_lists.js' %}"></script>
 {% endblock content %}
