--- a/SchoolManagmentApp/calendarApp/templates/edit_lesson.html
+++ b/SchoolManagmentApp/calendarApp/templates/edit_lesson.html
@@ -56,4 +56,6 @@
         </div>
     </div>
 </section>
+
+<script type="text/javascript" src="{% static 'js/dynamic_lists.js' %}"></script>
 {% endblock content %}
