--- a/SchoolManagmentApp/teacherApp/templates/edit_attendance.html
+++ b/SchoolManagmentApp/teacherApp/templates/edit_attendance.html
@@ -10,7 +10,7 @@
         <div class="filter-content mt-2">
             <form method="post">
                 {% csrf_token %}
-                <table class="table text-white">
+                <table class="table text-white table-colors">
                     <thead>
                         <tr>
                             <th>Student</th>
