--- a/SchoolManagmentApp/teacherApp/templates/lesson_conducting.html
+++ b/SchoolManagmentApp/teacherApp/templates/lesson_conducting.html
@@ -23,7 +23,7 @@
         <a class="text-decoration-none mx-2" href="{% url 'edit_attendance' current_lesson_report.id %}"><button id="filterButton"
             class="filter-button">Aattendance</button></a>
 
-        <a class="text-decoration-none mx-2" href=""><button id="filterButton"
+        <a class="text-decoration-none mx-2" href="{% url 'grades_teacher' current_lesson_report.id %}"><button id="filterButton"
             class="filter-button">Enter grades</button></a>
         </div>
         
